# creepHash

./: .gitignore  MultiCryptoTool.sln  README.md  creepHash.sln
MultiCryptoToolLib/Benchmark/: Benchmark.cs  CcminerBenchmark.cs  EthminerBenchmark.cs
MultiCryptoToolLib/Common/: HashRate.cs  Hashing.cs  JsonHelper.cs  ProcessHelper.cs
MultiCryptoToolLib/Mining/: Algorithm.cs  Coin.cs  Miner.cs  MiningInstance.cs  MultiMinerBase.cs
MultiCryptoToolLib/Network/: CoinInfoLoader.cs  PingTest.cs  PortLoader.cs  ProfitabilityLoader.cs
MultiMinerConsole/: MultiMinerConsole.csproj  Program.cs
MultiMinerConsole/confs/: coins.json  miner.json
MultiMinerGui/: MultiMinerGui.csproj
MultiMinerUtils/MultiMinerOpenCL/: CMakeLists.txt
MultiMinerUtils/MultiMinerOpenCL/src/: main.cpp
creepHashConsole/: MultiMiner.cs  Program.cs  creepHashConsole.csproj
creepHashConsole/confs/: algorithms.json  miner.json
creepHashGui/: Form1.Designer.cs  Form1.cs  Program.cs  creepHashGui.csproj
creepHashGui/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
creepHashLib/: creepHashLib.csproj
creepHashLib/Benchmark/: Benchmark.cs  CcminerBenchmark.cs  EthminerBenchmark.cs  SgminerBenchmark.cs
creepHashLib/Common/: Console.cs  Filename.cs  HashRate.cs  Hashing.cs  ILoader.cs  JsonHelper.cs  PeriodicTask.cs  ProcessHelper.cs
creepHashLib/Mining/: Coin.cs  Miner.cs  MiningInstance.cs  (+1 more)
creepHashTest/: UnitTest1.cs  creepHashTest.csproj
creepHashUtils/creepHashOpenCL/: CMakeLists.txt  CMakeSettings.json
creepHashUtils/creepHashOpenCL/src/: main.cpp
(+27 files in other folders)
