cmake_minimum_required(VERSION 3.0.2)
project(MultiMinerOpenCL)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/debug")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/release")
file(GLOB SOURCE_FILES src/*.*pp)
find_package(OpenCL REQUIRED)
include_directories(${OpenCL_INCLUDE_DIR})
add_executable(MultiMinerOpenCL ${SOURCE_FILES})
target_link_libraries(MultiMinerOpenCL ${OpenCL_LIBRARY})
set_target_properties(MultiMinerOpenCL PROPERTIES DEBUG_POSTFIX -d)
